# trans

./: .eslintrc  .firebaserc  .gitignore  build.gradle  cors.json  gradle.properties  index.html  package-lock.json  package.json  settings.gradle  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
app/: CMakeLists.txt  build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: upi.html
app/src/main/cpp/: Test.h  test-lib.cpp
app/src/main/cpp/cpp/: Test.cpp  Test.h  test-native-lib.cpp
app/src/main/res/drawable/: aadherexit.xml  ababackground_bg.xml  addboader.xml  background_day_hover.xml  background_day_selected.xml  background_day_today.xml  blue_circle_bg.xml  button.xml  button_background.xml  button_selector.xml  checkbox_background.xml  circle_bg.xml  circle_stroke.xml  dashed_line.xml  drawer_item_bg.xml  edit_text.xml  edit_text_blue.xml  edit_text_error.xml  edit_text_otp.xml  edit_text_otp_error.xml  edt_blue_border.xml  ic_downarrow.xml  leftfoot.xml  light_blue_circle_bg.xml  loadingsymbol.xml  mobilenewflow.xml  plus_grey.xml  pluss.xml  raw_value.xml  rect_edge_bg.xml  rightfoot.xml  round_disable_button.xml  rounded_approved_bg.xml  rounded_cancelled_bg.xml  rounded_completed_bg.xml  rounded_inprocess_bg.xml  rounded_oval_blue.xml  rounded_rectangel_light_blue.xml  rounded_rectangel_light_blue_border.xml  rounded_rectangle_blue.xml  (+21 more)
app/src/main/res/layout-large/: aadhernumber_exist.xml  abha_new_tab_mainscreen.xml  activity_change_pwd.xml  activity_change_pwd_success.xml  activity_foot.xml  (+81 more)
(+1096 files in other folders)
